--- a/_includes/sections/skills.html
+++ b/_includes/sections/skills.html
@@ -17,11 +17,11 @@
             datasets: [{
                 label: "{{ site.data.index.skills.label }}",
                 backgroundColor: "rgba(179,181,198,0.2)",
-                borderColor: "#3385FF",
-                pointBackgroundColor: "#3385FF",
+                borderColor: "#000000",
+                pointBackgroundColor: "#000000",
                 pointBorderColor: "#fff",
-                pointHoverBackgroundColor: "#3385FF",
-                pointHoverBorderColor: "#3385FF",
+                pointHoverBackgroundColor: "#000000",
+                pointHoverBorderColor: "#000000",
                 data: [{{ site.data.index.skills.percentage }}]
                 }]
         };
@@ -41,3 +41,4 @@
         </script>
     </div>
 </div>
+
