--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -2,7 +2,7 @@
     <div class="row m-b-lg">
         <div class="col-lg-12 text-center">
             <div class="navy-line"></div>
-            <h1><span data-i18n="about_me.about_me">About Me</span></h1>
+            <h1><span data-i18n="about_me.about_me">Hi there!</span></h1>
             <!-- <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.</p> -->
         </div>
     </div>
@@ -11,7 +11,7 @@
         {% for icon in site.author.skill_icon1 %}
         <div class="col-xs-2 wow fadeInLeft">
             <div class="team-member">
-                <div class="vote-icon" style="text-align: center">
+                <div class="vote-icon" style="text-align: center;color: black">
                     <i class="fa {{ icon.name }}"></i>
                 </div>
             </div>
@@ -38,7 +38,7 @@
                     {% if site.author.email %}
                     <li><a href="mailto:{{ site.author.email }}"><i class="fa fa-envelope-o"></i></a></li>
                     {% endif %}
-                    <li><a href="{{ site.baseurl }}/feed.xml" target="blank"><i class="fa fa-rss"></i></a></li>
+                    <li><a href="https://pypi.org/user/saurabh_londhe/" target="blank"><i class="fa icon-python"></i></a></li>
                     {% if site.author.cv %}
                     <li><a href="{{ site.author.cv }}" target="blank"><i class="fa fa-file-pdf-o"></i></a></li>
                     {% endif %}
@@ -49,7 +49,7 @@
         {% for icon in site.author.skill_icon2 %}
         <div class="col-xs-2 wow fadeInRight">
             <div class="team-member">
-                <div class="vote-icon" style="text-align: center">
+                <div class="vote-icon" style="text-align: center;color: black">
                     <i class="fa {{ icon.name }}"></i>
                 </div>
             </div>
