--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,8 +14,8 @@ layout: default
                     </div>
                     <div class="text-center article-title">
                     <span class="text-muted"><i class="fa fa-clock-o"></i> {{ page.date | date: "%-d %b %Y" }}</span>
-                        <h1>
-                            {{ page.title }}
+                        <h1 style="color: black">
+                            <b>{{ page.title }}</b>
                         </h1>
                     </div>
                     	{{ content }}
