--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2513,7 +2513,7 @@ body {
   }
   .carousel .item {
     height: 470px;
-    background-color: #EF6325;
+    background-color: #777;
   }
   .carousel-inner > .item > img {
     position: absolute;
