--- a/_includes/sections/links.html
+++ b/_includes/sections/links.html
@@ -25,6 +25,8 @@
                 </li>
                 <li><a href="mailto:{{ link.email }}"><i class="fa fa-envelope-o"></i></a>
                 </li>
+                <li><a href="{{ link.certs }}"><i class="fa fa-certificate"></i></a>
+                </li>
             </ul>
         </div>
         </div>
