--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,10 @@ layout: compress
 
 <body id="page-top" class="landing-page">
 
-    
+    {% if page.title != 'index' %}
+        {% include blog_header.html %}
+    {% endif %}
+
     {{ content }}
 
     {% if page.title != 'index' %}
