--- a/_includes/blog_header.html
+++ b/_includes/blog_header.html
@@ -41,7 +41,6 @@
         </div>
     </nav>
 </div>
-<!--{% if site.blog_carousel %}
+{% if site.blog_carousel %}
 {% include carousel.html %}
 {% endif %}
--->
