--- a/_includes/sections/career.html
+++ b/_includes/sections/career.html
@@ -15,7 +15,7 @@
                         <i class="fa {{ career.icon }}"></i>
                     </div>
                     <div class="vertical-timeline-content wow {% if loopindex == 1 %} rotateInUpRight {% else %} rotateInUpLeft {% endif %}">
-                        <img src="{{ career.name.logo | prepend: site.baseurl }}" class="img-responsive img-circle img-small" alt="">
+                        <center><img src="{{ career.name.logo | prepend: site.baseurl }}" class="img-responsive img-circle img-small" alt=""></center>
                         <h2><span data-i18n="career.{{ career.name.i18n }}">{{ career.name.detail }}</span></h2>
                         <p><span data-i18n="career.{{ career.desc.i18n }}">{{ career.desc.detail }} </span></p>
                         <span class="vertical-date"><span data-i18n="career.{{ career.date.i18n }}"> {{ career.date.detail }} </span>
