--- a/_includes/sections/career.html
+++ b/_includes/sections/career.html
@@ -16,7 +16,7 @@
                     </div>
                     <div class="vertical-timeline-content wow {% if loopindex == 1 %} rotateInUpRight {% else %} rotateInUpLeft {% endif %}">
                         <center><img src="{{ career.name.logo | prepend: site.baseurl }}" class="img-responsive img-circle img-small" alt=""></center>
-                        <h2><span data-i18n="career.{{ career.name.i18n }}">{{ career.name.detail }}</span></h2>
+                        <h2 style="color:black"><span data-i18n="career.{{ career.name.i18n }}">{{ career.name.detail }}</span></h2>
                         <p><span data-i18n="career.{{ career.desc.i18n }}">{{ career.desc.detail }} </span></p>
                         <span class="vertical-date"><span data-i18n="career.{{ career.date.i18n }}"> {{ career.date.detail }} </span>
                         <br/> <small><span data-i18n="career.{{ career.job.i18n }}">{{ career.job.detail }}</span></small> </span>
