--- a/_includes/sections/certificates.html
+++ b/_includes/sections/certificates.html
@@ -40,7 +40,7 @@
 </div>
 <br>
 <!--***************************************************************************************************-->
-<div class="container" id="i18_career">
+<div class="container" id="i18_career" style="background-color: #F4F4F4" >
     <div class="row">
         <div class="col-lg-12 text-center">
             <div class="navy-line"></div>
