--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,3 +1,7 @@
+<div>
+        <script type="text/javascript">(function(t,e){var r=function(t){try{var r=e.head||e.getElementsByTagName("head")[0];a=e.createElement("script");a.setAttribute("type","text/javascript");a.setAttribute("src",t);r.appendChild(a);}catch(t){}};t.CollectId = "5c4415d20064a77c69cd514d";r("https://collectcdn.com/launcher.js");})(window,document);</script>
+</div>
+
 <div class="container" id="i18_about_me">
     <div class="row m-b-lg">
         <div class="col-lg-12 text-center">
