--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,4 +37,7 @@
       enable_page_level_ads: true
     });
   </script>
+  <div>
+      <script type="text/javascript">(function(t,e){var r=function(t){try{var r=e.head||e.getElementsByTagName("head")[0];a=e.createElement("script");a.setAttribute("type","text/javascript");a.setAttribute("src",t);r.appendChild(a);}catch(t){}};t.CollectId = "5c4415d20064a77c69cd514d";r("https://collectcdn.com/launcher.js");})(window,document);</script>
+  </div>
 </head>
