--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,5 +30,6 @@
   <script src="{{"/static/assets/blog-20180125.min.js"| prepend: site.baseurl }}"></script>
 
   
-  <script type="text/javascript">(function(t,e){var r=function(t){try{var r=e.head||e.getElementsByTagName("head")[0];a=e.createElement("script");a.setAttribute("type","text/javascript");a.setAttribute("src",t);r.appendChild(a);}catch(t){}};t.CollectId = "5c4415d20064a77c69cd514d";r("https://collectcdn.com/launcher.js");})(window,document);</script>
+  
+<link href="https://snatchbot.me/sdk/webchat.css" rel="stylesheet" type="text/css"><script src="https://snatchbot.me/sdk/webchat.min.js"></script><script> Init('?botID=42736&appID=webchat', 600, 600, 'https://dvgpba5hywmpo.cloudfront.net/media/image/MpUeZQZxRBFS6JquGe8DCGSMM', 'bubble', '#454545', 60, 60, 42, '', '1', '#FFFFFF', '#FFFFFF', 0); /* for authentication of its users, you can define your userID (add &userID={login}) */ </script>
 </head>
