added more skills

--- a/_includes/sections/skills.html
+++ b/_includes/sections/skills.html
@@ -7,7 +7,7 @@
     </div>
     <div class="row features-block">
         <div class="wow zoomIn col-lg-6 col-lg-offset-3">
-            <canvas id="{{ site.data.index.skills.id }}" height="500" width="500"></canvas>
+            <canvas id="{{ site.data.index.skills.id }}" height="400" width="400"></canvas>
         </div>
         <div class="col-lg-1"></div>
         <script>
@@ -39,6 +39,13 @@
             }
         });
         </script>
+    </div>
+    <div class="row">
+        {% for icon in site.data.index.technology %}
+        <div class="col-xs-1 vote-icon">
+            <i class="fa {{icon.icon}}"></i>
+        </div>
+        {% endfor %}
     </div>
 </div>
 
