added tooltip to icons

--- a/_includes/sections/skills.html
+++ b/_includes/sections/skills.html
@@ -43,7 +43,7 @@
     <div class="row">
         {% for icon in site.data.index.technology %}
         <div class="col-xs-1 vote-icon">
-            <i class="fa {{icon.icon}}"></i>
+            <i class="fa {{icon.icon}}" title="{{icon.name}}"></i>
         </div>
         {% endfor %}
     </div>
