added background color to header-back

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2518,6 +2518,7 @@ body {
     width: 100%;
     background-position: 50% 0;
     background-repeat:  no-repeat;
+    background-color: #ef6324;
   }
   .carousel {
     height: 470px;
