added github contributions graph to about page :octocat: 👉 👤

--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -60,5 +60,8 @@
         <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg wow zoomIn">
             <p><span data-i18n="about_me.des">{{ site.author.desc }}</span></p>
         </div>
+        <div class="row about-git-contributions">
+            <img src="https://ghchart.rshah.org/{{site.author.github_username}}" alt="Saurabh Londhe's github contributions" >
+        </div>
     </div>
 </div>
